package com.annepolis.lexiconmeum.ingest;

import com.annepolis.lexiconmeum.shared.model.Lexeme;

public interface IngestLexemeUseCase {
    void ingest(Lexeme lexeme);
}
